force-app/main/default/objects/Active_Subscriptions__c/Active_Subscriptions__c.object-meta.xml
<CustomObject>
    <label>Active Subscription</label>
    <nameField>
        <label>Active Subscriptions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>