force-app/main/default/objects/Active_Subscriptions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Active Subscriptions</relationshipLabel>
    <relationshipName>Active_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>