force-app/main/default/objects/Active_Subscriptions__c/fields/ChargeOverSubLineItemId__c.field-meta.xml
<CustomField>
    <fullName>ChargeOverSubLineItemId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ChargeOver Sub Line Item Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>