force-app/main/default/objects/Active_Subscriptions__c/fields/ChargeOverSubscriptionLineItem__c.field-meta.xml
<CustomField>
    <fullName>ChargeOverSubscriptionLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Subscription Line Item</label>
    <referenceTo>ChargeOver_Subscription_Line_Item__c</referenceTo>
    <relationshipLabel>Active Subscriptions</relationshipLabel>
    <relationshipName>Active_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>