force-app/main/default/objects/Active_Subscriptions__c/fields/Line_Items_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Last_Modified__c</fullName>
    <label>Line Items Last Modified</label>
    <type>DateTime</type>
</CustomField>