force-app/main/default/objects/Active_Subscriptions__c/fields/Original_Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Start_Date__c</fullName>
    <label>Original Subscription Start Date</label>
    <type>Date</type>
</CustomField>