force-app/main/default/objects/Active_Subscriptions__c/fields/Paused_Date__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date__c</fullName>
    <description>The Date that the any related subscription for the same product was paused/suspended.</description>
    <label>Paused Date</label>
    <type>Date</type>
</CustomField>