force-app/main/default/objects/Active_Subscriptions__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Active Subscriptions</relationshipLabel>
    <relationshipName>Active_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>