force-app/main/default/objects/Active_Subscriptions__c/fields/Subscription_Item__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Item__c</fullName>
    <label>Subscription Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>