force-app/main/default/objects/Active_Subscriptions__c/fields/Subscription_Product_Charge__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Product &amp; Charge</label>
    <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
    <relationshipLabel>Active Subscriptions</relationshipLabel>
    <relationshipName>Active_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>