force-app/main/default/objects/Active_Subscriptions__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <label>Subscription Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>