force-app/main/default/objects/Active_Subscriptions__c/fields/Total_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Applied__c</fullName>
    <label>Total Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>