force-app/main/default/objects/Active_Subscriptions__c/fields/Total_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchased__c</fullName>
    <label>Total Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>