force-app/main/default/objects/Active_Subscriptions__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>